Day-19/crud-staffs/src/test/java/com/syntaxErrors/crudstaffs/CrudStaffsApplicationTests.java
package com.syntaxErrors.crudstaffs;

import org.junit.jupiter.api.Test;
import org.springframework.boot.test.context.SpringBootTest;

@SpringBootTest
class CrudStaffsApplicationTests {

	@Test
	void contextLoads() {
	}

}
